// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List component renders the unordered blue list correctly 1`] = `
<div
  class="flex items-center"
  data-testid="list-element"
>
  <ul
    class="list-disc marker:text-blue-800 marker:mr-2 marker:pr-2 space-y-2 marker:leading-snug"
    start="-1"
  >
    <li>
      <p>
        First line
      </p>
    </li>
    <li>
      <p>
        Second Line
      </p>
    </li>
    <li>
      <p>
        Third Line
      </p>
    </li>
  </ul>
</div>
`;

exports[`List component renders the unordered blue list correctly 2`] = `
<div
  class="flex items-center"
  data-testid="list-element"
>
  <ol
    class="list-decimal marker:text-blue-800 marker:mr-2 marker:pr-2 space-y-2 marker:leading-snug"
  >
    <li>
      <p>
        First line
      </p>
    </li>
    <li>
      <p>
        Second Line
      </p>
    </li>
    <li>
      <p>
        Third Line
      </p>
    </li>
  </ol>
</div>
`;

exports[`List component renders the unordered dark list correctly 1`] = `
<div
  class="flex items-center"
  data-testid="list-element"
>
  <ul
    class="list-disc marker:mr-2 marker:pr-2 space-y-2 marker:leading-snug"
    start="-1"
  >
    <li>
      <p>
        First line
      </p>
    </li>
    <li>
      <p>
        Second Line
      </p>
    </li>
    <li>
      <p>
        Third Line
      </p>
    </li>
  </ul>
</div>
`;

exports[`List component renders the unordered dark list correctly 2`] = `
<div
  class="flex items-center"
  data-testid="list-element"
>
  <ol
    class="list-decimal marker:mr-2 marker:pr-2 space-y-2 marker:leading-snug"
  >
    <li>
      <p>
        First line
      </p>
    </li>
    <li>
      <p>
        Second Line
      </p>
    </li>
    <li>
      <p>
        Third Line
      </p>
    </li>
  </ol>
</div>
`;

exports[`List component renders the unordered magenta list correctly 1`] = `
<div
  class="flex items-center"
  data-testid="list-element"
>
  <ul
    class="list-disc marker:text-pink-800 marker:mr-2 marker:pr-2 space-y-2 marker:leading-snug"
    start="-1"
  >
    <li>
      <p>
        First line
      </p>
    </li>
    <li>
      <p>
        Second Line
      </p>
    </li>
    <li>
      <p>
        Third Line
      </p>
    </li>
  </ul>
</div>
`;

exports[`List component renders the unordered magenta list correctly 2`] = `
<div
  class="flex items-center"
  data-testid="list-element"
>
  <ol
    class="list-decimal marker:text-pink-800 marker:mr-2 marker:pr-2 space-y-2 marker:leading-snug"
  >
    <li>
      <p>
        First line
      </p>
    </li>
    <li>
      <p>
        Second Line
      </p>
    </li>
    <li>
      <p>
        Third Line
      </p>
    </li>
  </ol>
</div>
`;
